Fix center alignment issue in guides blocks

--- a/guides/assets/stylesrc/_dark.scss
+++ b/guides/assets/stylesrc/_dark.scss
@@ -219,6 +219,8 @@
     } // #feature
 
     .interstitial {
+      display: flex;
+      align-items: center;
       &.code {
         background-color: $gray-900;
         border: 1px solid $gray-800 !important;
@@ -230,23 +232,21 @@
         border-color: $note-dark;
         background-color: $note-bkgnd-dark;
       }
-    
+
       &.info {
         border-color: $tip-dark;
         background-color: $tip-bkgnd-dark;
       }
-    
+
       &.warning {
         border-color: $stop-dark;
         background-color: $stop-bkgnd-dark;
       }
-    
+
       &.question {
         border-color: $gray-600;
         background-color: $gray-700;
       }
-    
-
-    }  
+    }
   } // body.guide
 } // @media (prefers-color-scheme: dark
